--- a/core/core-ui/src/main/AndroidManifest.xml
+++ b/core/core-ui/src/main/AndroidManifest.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <application>
+        <activity
+            android:name=".SumanjeetScreen"
+            android:exported="false"
+            android:label="@string/title_activity_sumanjeet_screen"
+            android:theme="@style/Theme.Gurukul" />
+    </application>
+
 </manifest>
